--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+html{
+  scrollbar-width: thin;
+  scrollbar-color: red;
+}
+
+html::-webkit-scrollbar{
+  width: 10px
+}
+
+html::-webkit-scrollbar-thumb{
+  background-color: red;
+}
+
+html::-webkit-scrollbar-track{
+  background-color: green;
+}
